Scrollview: fix a problem with too big size of content when margin is set

--- a/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.scrollview.less
+++ b/tau/src/css/profile/mobile/changeable/common/jquery.mobile.tizen.scrollview.less
@@ -9,6 +9,7 @@
 	overflow-y : visible;
 	min-height : 100%;
 	min-width : 100%;
+	box-sizing: border-box;
 }
 
 .ui-scrolllistview .ui-li-divider {
